Fix default widget visibility

--- a/src/components/background/background.scss
+++ b/src/components/background/background.scss
@@ -25,6 +25,6 @@
   }
 
   &__image + &__content {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25) 0, rgba(0, 0, 0, 0.3) 40%, rgba(0, 0, 0, 0.3) 60%, rgba(0, 0, 0, 0.25));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25) 0, rgba(0, 0, 0, 0.25) 40%, rgba(0, 0, 0, 0.25) 60%, rgba(0, 0, 0, 0.25));
   }
 }
